8267555: Fix class file version during redefinition after 8238048